--- a/model/brightness_models.yml
+++ b/model/brightness_models.yml
@@ -1,92 +1,121 @@
-
 cluster_defaults:
-  ra: 0.0               # degrees
-  dec: 0.0              # degrees
+  ra: 0.0
+  dec: 0.0
   redshift: 1.0
-  mass: 1.0e14          # M500 (solar masses)
-  bias: 0.0             # (1-b) mass bias (set 0.2 for 20% bias, etc.)
-  e: 0.0                # ellipticity (0 = circular)
-  angle: 0.0            # position angle (deg)
-  offset: 0.0           # additive offset
-  temperature: 0.0      # keV (not yet used in pressure models)
-  depth: null           # only used for A10PressureLS variant
+  mass: 1.0e14
+  bias: 0.0
+  e: 0.0
+  angle: 0.0
+  offset: 0.0
+  temperature: 0.0
 
-# Profile-specific parameters
-profiles:
-  # Arnaud et al. 2010 profiles
-  a10_up:  # Universal profile
+distributions:
+  # A10 variants (Arnaud+2010)
+  a10_up:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 1.177   # c500
     parameters:
+      c500: 1.177
       alpha: 1.051
       beta: 5.4905
       gamma: 0.3081
-      p_norm: 8.403        # P0 normalization; also accepted as p0
+      p_norm: 8.403
       alpha_p: 0.12
-      
-  a10_cc:  # Cool core
+      log10: null
+      depth: null
+
+  a10_cc:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 1.128
     parameters:
+      c500: 1.128
       alpha: 1.2223
       beta: 5.4905
       gamma: 0.7736
       p_norm: 3.249
       alpha_p: -0.1
+      log10: null
+      depth: null
 
-  a10_md:  # Morphologically disturbed
+  a10_md:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 1.083
     parameters:
+      c500: 1.083
       alpha: 1.4063
       beta: 5.4905
       gamma: 0.3798
       p_norm: 3.202
       alpha_p: -0.1
+      log10: null
+      depth: null
 
-  # McDonald et al. 2014 profiles  
-  m14_up:  # Universal profile
+  # McDonald+2014 (A10 form)
+  m14_up:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 2.59
     parameters:
+      c500: 2.59
       alpha: 2.27
       beta: 3.48
       gamma: 0.15
       p_norm: 3.47
       alpha_p: -0.1
-      
-  m14_cc:  # Cool core
+      log10: null
+      depth: null
+
+  m14_cc:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 2.8
     parameters:
+      c500: 2.8
       alpha: 2.3
       beta: 3.34
       gamma: 0.21
       p_norm: 3.7
       alpha_p: -0.1
-      
-  m14_nc:  # Non-cool core
+      log10: null
+      depth: null
+
+  m14_nc:
+    function: a10Profile
     model_type: A10Pressure
     spectrum_type: tSZ
-    concentration: 1.5
     parameters:
+      c500: 1.5
       alpha: 1.7
       beta: 5.74
       gamma: 0.05
       p_norm: 3.91
       alpha_p: -0.1
+      log10: null
+      depth: null
 
-  # Ghirardini et al. 2017 profiles
-  g17_ex:  # Extended
+# original gNFW profile
+  gnfw:
+    model_type: gnfwPressure
+    function: gnfwProfile
+    spectrum_type: tSZ
+    parameters:
+      alpha: 1.051
+      beta: 5.4905
+      gamma: 0.3081
+      p_norm: 8.403
+      r_s: 1.0
+      c500: null  # placeholder for compatibility
+
+  # Ghirardini+2017
+  g17_ex:
+    function: g17Profile
     model_type: G17Pressure
     spectrum_type: tSZ
-    concentration: 1.27
     parameters:
+      c500: 1.27
       alpha: 1.33
       beta0: 4.77
       beta1: 0.056
@@ -97,12 +126,14 @@ profiles:
       p_norm: 0.1716
       alpha_p: -0.051
       c_p: -0.321
-      
-  g17_st:  # Standard
+      log10M: null
+
+  g17_st:
+    function: g17Profile
     model_type: G17Pressure
     spectrum_type: tSZ
-    concentration: 1.21
     parameters:
+      c500: 1.21
       alpha: 1.23
       beta0: 5.06
       beta1: 0.0
@@ -113,40 +144,47 @@ profiles:
       p_norm: 0.1701
       alpha_p: 0.0105
       c_p: -0.121
+      log10M: null
 
-  # Le Brun et al. 2015 profiles
-  l15_00:  # 0% AGN feedback
+  # Le Brun+2015
+  l15_00:
+    function: l15Profile
     model_type: L15Pressure
     spectrum_type: tSZ
-    concentration: 0.986
     parameters:
+      c500: 0.986
       alpha: 1.489
       beta: 4.512
       gamma: 1.174
       delta: 0.072
       epsilon: 0.245
       p_norm: 0.694
-      
-  l15_80:  # 80% AGN feedback
+      log10M: null
+
+  l15_80:
+    function: l15Profile
     model_type: L15Pressure
     spectrum_type: tSZ
-    concentration: 0.892
     parameters:
+      c500: 0.892
       alpha: 1.517
       beta: 4.625
       gamma: 0.814
       delta: 0.263
       epsilon: 0.805
       p_norm: 0.791
-      
-  l15_85:  # 85% AGN feedback
+      log10M: null
+
+  l15_85:
+    function: l15Profile
     model_type: L15Pressure
     spectrum_type: tSZ
-    concentration: 0.597
     parameters:
+      c500: 0.597
       alpha: 1.572
       beta: 4.85
       gamma: 0.92
       delta: 0.246
       epsilon: 0.864
       p_norm: 0.235
+      log10M: null
